Fixes some problems caused by the Early June 2019 Discord Update
- Added comments
- Added transition for player names's opacity
- Fixed the selectors

--- a/small-members-tab.theme.css
+++ b/small-members-tab.theme.css
@@ -1,29 +1,31 @@
-//META{"name":"Small-members-tab-fixed(April 2018)","description":"Make the members tab smaller(it gets full size when you hover it).","author":"Beard_Design, MKody, NightCross00","version":"1.6.2"}*//{}
+//META{"name":"Small-members-tab-fixed(June 2019)","description":"Make the members tab smaller(it gets full size when you hover it).","author":"Beard_Design, MKody, NightCross00","version":"1.6.3"}*//{}
 
 /*-------------------made by Beard Design-------------------------*/
 .app {
   overflow-x: hidden;
 }
 
-div[class*="membersWrap-"] div[class*="members-"] {
+div[class*="membersWrap-"] {
   transform: translate(0px);
   z-index: 2000;
   transition: all 400ms cubic-bezier(.2, 0, 0, 1);
 }
 
-div[class*="membersWrap-"] div[class*="members-"]:hover {
+div[class*="membersWrap-"]:hover {
   transform: translate(-150px);
 }
 
+/* Player Names disappear when compacted*/
 div[class*="membersWrap-"] div[class*="members-"] div[class*="member-"] div[class*="memberInner-"] {
   opacity: 0;
-  transition: all 100ms ease;
+  transition: all 400ms ease-in;
 }
 
 div[class*="membersWrap-"] div[class*="members-"]:hover div[class*="member-"] div[class*="memberInner-"] {
   opacity: 1;
 }
 
+/* Member Icon spacing adjustments + Misc */
 div[class*="membersWrap-"] div[class*="members-"] div[class*="membersGroup-"] {
   transform: translate(-50%) scale(0.8);
   transition: 400ms cubic-bezier(.2, 0, 0, 1), max-width 1ms;
@@ -53,6 +55,7 @@ div[class*="membersWrap-"] div[class*="members-"]:hover div[class*="membersGroup
   text-overflow: 'a';
 }
 
+/* Sets the Compacted Width*/
 div[class*="membersWrap-"] {
   min-width: 70px !important;
   width: 70px !important
